--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ torchvision>=0.5.0
 opencv-python>=3.4.2.17
 scikit-image>=0.14.2
 scipy>=1.1.0
+python-dotenv>=0.19.2
+
+# Amazon OCR
+boto3>=1.15.0
