feat(gui/home): new project form, enable disable config requirement message for ocr and translation service selectors

--- a/gui/ComicTranslator/CMakeLists.txt
+++ b/gui/ComicTranslator/CMakeLists.txt
@@ -26,6 +26,7 @@ set(PROJECT_SOURCES
         page/home/homepage.h
         ui/home_page.ui
         include/environment.h
+        include/models.h
         ${TS_FILES}
 )
 
