--- a/gui/ComicTranslator/CMakeLists.txt
+++ b/gui/ComicTranslator/CMakeLists.txt
@@ -35,6 +35,7 @@ set(PROJECT_SOURCES
         widget/editor/APropertyTab.h widget/editor/APropertyTab.cpp
         widget/editor/property/ExtractionPropertyTab.h widget/editor/property/ExtractionPropertyTab.cpp
         widget/editor/property/CleanPropertyTab.h widget/editor/property/CleanPropertyTab.cpp
+        widget/editor/property/EditPropertyTab.h widget/editor/property/EditPropertyTab.cpp
         ${TS_FILES}
 )
 
