feat(gui): Abstract editor widget interface, show pages, show source pages, loading icon

--- a/gui/ComicTranslator/CMakeLists.txt
+++ b/gui/ComicTranslator/CMakeLists.txt
@@ -37,6 +37,7 @@ set(PROJECT_SOURCES
         widget/editor/property/CleanPropertyTab.h widget/editor/property/CleanPropertyTab.cpp
         widget/editor/property/EditPropertyTab.h widget/editor/property/EditPropertyTab.cpp
         widget/editor/property/SavePropertyTab.h widget/editor/property/SavePropertyTab.cpp
+        widget/editor/QPageViewer.h widget/editor/QPageViewer.cpp
         ${TS_FILES}
 )
 
