--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -1,7 +1,7 @@
 torch>=0.4.1.post2
 torchvision>=0.5.0
 opencv-python>=3.4.2.17
-scikit-image>=0.14.2
+#scikit-image>=0.14.2
 scipy>=1.1.0
 python-dotenv>=0.19.2
 numpy
@@ -15,3 +15,9 @@ deep_translator
 
 # sudo apt-get install libbz2-dev
 # sudo cp /usr/lib/python3.7/lib-dynload/_bz2.cpython-37m-x86_64-linux-gnu.so /usr/local/lib/python3.7
+
+Cython>=0.29
+
+## Tesseract
+# sudo apt install tesseract-ocr
+# sudo apt install libtesseract-dev
