--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -1,11 +1,14 @@
 torch>=0.4.1.post2
 torchvision>=0.5.0
 opencv-python>=3.4.2.17
-#scikit-image>=0.14.2
+scikit-image #>=0.14.2
 scipy>=1.1.0
 python-dotenv>=0.19.2
 numpy
 pytesseract
+
+# Render : Text Editor
+pillow<=9.5.0
 
 # Amazon OCR
 boto3>=1.15.0
